# project-chimera

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CHAT_HISTORY.md  Dockerfile  Makefile  README.md  mcp_client.py  pyproject.toml
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: main.yml  spec-tests.yml
research/: tooling_strategy.md
scripts/: check_trend.py  try_import.py
skills/: README.md  __init__.py  image_generator.py  skill_download_youtube.py  skill_fetch_trends.py  skill_transcribe_audio.py  trend_fetcher.py  wallet_manager.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: conftest.py  test_import_skills.py  test_skills_interface.py  test_trend_fetcher.py
